--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "trend-building",
+  "name": "building",
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
     "express": "~4.0.0",
     "morgan": "~1.0.0",
-    "body-parser": "~1.5.0",
+    "body-parser": "~1.0.0",
     "method-override": "~1.0.0",
-    "serve-favicon": "~2.0.1",
+    "static-favicon": "~1.0.1",
     "cookie-parser": "~1.0.1",
     "express-session": "~1.0.2",
     "errorhandler": "~1.0.0",
@@ -19,13 +19,15 @@
     "express-jwt": "^0.1.3",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
+    "passport-facebook": "latest",
+    "passport-google-oauth": "latest",
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.7.2",
-    "grunt-wiredep": "~1.8.0",
+    "grunt-bower-install": "~1.4.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
@@ -48,10 +50,9 @@
     "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^1.1.0",
+    "grunt-protractor-runner": "^0.2.4",
     "grunt-asset-injector": "^0.1.0",
     "grunt-karma": "~0.8.2",
-    "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-mocha-test": "~0.10.2",
     "jit-grunt": "^0.5.0",
     "time-grunt": "~0.3.1",
