--- a/server/.jshintrc
+++ b/server/.jshintrc
@@ -4,7 +4,7 @@
   "bitwise": true,
   "eqeqeq": true,
   "immed": true,
-  "latedef": "nofunc",
+  "latedef": true,
   "newcap": true,
   "noarg": true,
   "regexp": true,
