add linkedin, github oauth

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-facebook": "latest",
     "passport-github": "^0.1.5",
     "passport-google-oauth": "latest",
+    "passport-linkedin-oauth2": "^1.2.1",
     "passport-local": "~0.1.6",
     "static-favicon": "~1.0.1"
   },
