--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "angular-material": "~0.8.3"
+    "angular-material": "~0.8.3",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
