TERN-24 course tab done

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-ui-router": "~0.2.10",
     "angular-material": "~0.8.3",
     "d3": "~3.5.5",
-    "c3": "~0.4.10"
+    "c3": "~0.4.10",
+    "angular-slick": "~0.1.18"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
